# Reduceron

./: .gitignore  Makefile  cabal.project
emulator/: emu.c
flite/: Makefile  flite.cabal
flite/Flite/: Case.hs  Compile.hs  Inline.hs  Interp.hs  LambdaLift.hs  Predex.hs  PrettyHaskell.hs  RedCompile.hs  RedFrontend.hs  RedSyntax.hs  Syntax.hs  Traversals.hs
fpga/: Bytecode.hi  Bytecode.hs  CachingOctostack.hi  CachingOctostack.hs  Code.hi  Code.hs  Collect.hi  Collect.hs  Encode.hi  Heap.hi  Heap.hs  Hex.hi  Main.hi  Main.hs  Reduceron.hi  Reduceron.hs  RegFile.hi  Syntax.hi  Unistack.hi  Unistack.hs
fpga/Reduceron/: Reduceron.vhd  init_ram_c133.txt  init_ram_c138.txt  ram_c1045.tcl  ram_c1063.tcl  ram_c1136.tcl  ram_c1154.tcl  ram_c133.tcl  ram_c138.tcl  ram_c1536.tcl  ram_c1647.tcl  ram_c1750.tcl  ram_c180.tcl  ram_c185.tcl  ram_c1861.tcl  ram_c1914.tcl  ram_c20080.tcl  ram_c2025.tcl  ram_c20276.tcl  ram_c2092.tcl  ram_c2203.tcl  ram_c2285.tcl  ram_c2396.tcl  ram_c390.tcl  ram_c405.tcl  ram_c810.tcl  (+3 more)
ghc-flite/: ghc-flite.cabal
ghc-flite/src/: Main.hs
ghc-flite/src/GHCFlite/: Translate.hs
ghc-flite/test/: ReduceronParams.ipynb  adjoxo_param_sweep.csv  mss_param_sweep.csv  param_sweep.csv  pilgrim_comparison.csv  test_main.hs
ghc-flite/test/adjoxo/: Adjoxo.hs  ghc_noopt.fl  ghc_noopt_hand_tidy.fl  ghc_noopt_no_pair.fl  ghc_o2.fl  orig.fl
ghc-flite/test/fib/: Fib.hs  ghc_noopt.fl  ghc_o2.fl
ghc-flite/test/mate/: Mate.hs  ghc_noopt.fl  ghc_o2.fl
ghc-flite/test/mss/: MSS.hs  ghc_noopt.fl  ghc_o2.fl
programs/: Makefile
red-lava/: red-lava.cabal
(+29 files in other folders)
