name:                ghc-flite
version:             0.1.0.0
synopsis:            GHC backend that translates to the Reduceron's F-lite

-- description:
homepage:            http://github.com/benjijones/red
license:             BSD3
license-file:        LICENSE
author:              Benji Jones
maintainer:          benji.s.jones@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable ghc_flite
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:      GHCFlite.Translate
  build-depends:      base             ==4.12.*,
                      transformers     >= 0.5.6 && < 0.6,
                      ghc              >= 8.6.5 && < 8.7,
                      ghc-paths        >= 0.1.0 && < 0.2,
                      flite            ==0.6.*

